--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
         "name": "Next.js: debug client-side",
         "type": "pwa-chrome",
         "request": "launch",
-        "url": "http://localhost:3000"
+        "url": "https://afs-web01:91"
       },
       {
         "name": "Next.js: debug full stack",
