--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     "lint": "next lint",
     "lint-fix": "next lint --fix"
   },
-  "proxy": "https://afs-web01:5051",
+  "proxy": "http://localhost:5051",
   "dependencies": {
     "@azure/msal-browser": "^2.23.0",
     "@azure/msal-react": "^1.3.2",
