--- a/client/package.json
+++ b/client/package.json
@@ -52,6 +52,7 @@
     "react-bootstrap": "^2.2.3",
     "react-bootstrap-navbar": "^1.1.0",
     "react-chartjs-2": "^3.0.4",
+    "react-csv": "^2.2.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^6.0.0-0",
     "react-papaparse": "^4.0.2",
@@ -72,6 +73,7 @@
     "@types/next": "^9.0.0",
     "@types/nprogress": "^0.2.0",
     "@types/react": "16.9.19",
+    "@types/react-csv": "^1.1.3",
     "@types/react-dom": "16.9.5",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.0.3-canary.7",
